--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <img alt="Profile Picture">
                     </div>
                     <h3 class="name">Nenad Kaevik</h3>
-                    <h5 class="position">Web Developer • UI Designer • Logo Designer</h5>
+                    <h5 class="position">Web Developer • UI Designer</h5>
                     <div class="social">
                         <a target="_blank" href="https://www.linkedin.com/in/nenad-kaevik-720a1352/"><i class="fab fa-linkedin-in"></i></a>
                         <a target="_blank" href="https://www.instagram.com/nenad_kaevik/"><i class="fab fa-instagram"></i></a>
