--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         <div class="row main align-items-center justify-content-center">
             <div class="col-lg-4 col-md-5">
                 <div class="board">
-                    <div id="avatar" class="avatar">
-                        <img alt="Profile Picture">
-                    </div>
+                    <div class="avatar"></div>
                     <h3 class="name">Nenad Kaevik</h3>
                     <h5 class="position">Web Developer • UI Designer</h5>
                     <div class="social">
