Updated social links

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <h3 class="name">Nenad Kaevik</h3>
                     <h5 class="position">Web Developer • UI Designer</h5>
                     <div class="social">
-                        <a target="_blank" href="https://www.linkedin.com/in/nenad-kaevik-720a1352/"><i class="fab fa-linkedin-in"></i></a>
-                        <a target="_blank" href="https://www.instagram.com/nenad_kaevik/"><i class="fab fa-instagram"></i></a>
+                        <a target="_blank" href="https://linkedin.com/in/nenadkaevik"><i class="fab fa-linkedin-in"></i></a>
+                        <a target="_blank" href="https://instagram.com/nenad_kaevik/"><i class="fab fa-instagram"></i></a>
                         <a target="_blank" href="https://github.com/NenadKaevik"><i class="fab fa-github"></i></a>
                         <a target="_blank" href="https://dribbble.com/nenadkaevik"><i class="fab fa-dribbble"></i></a>
                         <a target="_blank" href="mailto:nenadkaevik@gmail.com"><i class="far fa-envelope"></i></a>
