--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="board">
                     <div class="avatar"></div>
                     <h3 class="name">Nenad Kaevik</h3>
-                    <h5 class="position">Web Developer • UI Designer</h5>
+                    <h5 class="position">Web Developer • UI Designer • Logo Designer</h5>
                     <div class="social">
                         <a target="_blank" href="https://linkedin.com/in/nenadkaevik"><i class="fab fa-linkedin-in"></i></a>
                         <a target="_blank" href="https://instagram.com/nenad_kaevik/"><i class="fab fa-instagram"></i></a>
