--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <h3 class="name">Nenad Kaevik</h3>
                     <h5 class="position">Web Developer • UI Designer • Logo Designer</h5>
                     <div class="social">
+                        <a target="_blank" href="https://docs.google.com/document/d/1NqePv88QWuSDe25HWW-ccBIH9vr7e8zMgJOwLm1JiEE/export?format=pdf"><i class="far fa-file"></i></a>
                         <a target="_blank" href="https://linkedin.com/in/nenadkaevik"><i class="fab fa-linkedin-in"></i></a>
                         <a target="_blank" href="https://instagram.com/nenad_kaevik/"><i class="fab fa-instagram"></i></a>
                         <a target="_blank" href="https://github.com/NenadKaevik"><i class="fab fa-github"></i></a>
